Minor spacing issue

--- a/packages/webapp/src/App.module.css
+++ b/packages/webapp/src/App.module.css
@@ -30,7 +30,7 @@
 }
 
 .auctionActivityCol {
-  padding-right: 5rem;
+  /*padding-right: 5rem;*/
   padding-bottom: 0rem;
   /*min-height: 520px;*/
   align-self: flex-end !important;
